Content semantics updated

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,9 +26,9 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
+    <section class="hero"></section>
+    <section class="content">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook showing a word map with SEO in the middle, surrounded by content, headings, mobile compatibility, social media, link building, and backlink, on a work desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -49,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
