--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" alt="Laptop reflecting a graph of reputation increasing" class="service">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div id="online-reputation-management"  class="service">
+            <img src="./assets/images/online-reputation-management.jpg" alt="Laptop reflecting a graph of reputation increasing"class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -53,21 +53,21 @@
     <aside class="benefits">
         <div class="benefit-type">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="" />
+            <img src="./assets/images/lead-generation.png" alt="cog funneling into money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-type">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt =""/>
+            <img src="./assets/images/brand-awareness.png" alt ="character with a lightbulb head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-type">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt=""/>
+            <img src="./assets/images/cost-management.png" alt="cog with money"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
